test_programs/compile_failure/noirc_frontend_tests_traits_type_checks_trait_default_method_and_errors/src/main.nr

        pub trait Foo {
            fn foo(self) -> i32 {
                true
            }
        }

        fn main() {}
    